--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: my-app
 
 steps:
   - name: build
-    image: docker:20
+    image: node:14
     commands:
       - docker build . -t my-app
     when:
