--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,8 @@ name: my-app
 steps:
   - name: build-and-deploy
     image: docker:20
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
     commands:
       - docker build -t my-app .
       - docker run -d -p 8080:80 --name my-app my-app
