--- a/.drone.yml
+++ b/.drone.yml
@@ -29,3 +29,15 @@ steps:
   commands:
   - sleep 5 # give docker enough time to start
   - docker ps -a
+
+services:
+- name: docker
+  image: docker:dind
+  privileged: true
+  volumes:
+  - name: dockersock
+    path: /var/run
+
+volumes:
+- name: dockersock
+  temp: {}
