--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
   image: prakash2403/ubuntu-docker-cli:intel
   volumes:
   - name: dockersock
-    path: /var/run
+    path: /var/run/docker.sock
   commands:
   - sleep 5 # give docker enough time to start
   - docker build . -t my-app
@@ -36,8 +36,8 @@ services:
   privileged: true
   volumes:
   - name: dockersock
-    path: /var/run
+    path: /var/run/docker.sock
 
 volumes:
 - name: dockersock
-  temp: {}
+  path: /var/run/docker.sock
